--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "homepage": "https://Cahillmn.github.io/harry-potter/",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "vue-cli-service start",
+    "test": "vue-cli-service test",
+    "eject": "vue-cli-service eject"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -18,6 +23,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2"
   }
